--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -179,6 +179,16 @@
                                     <constraint firstAttribute="height" constant="35" id="gRV-jj-zEj"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xR8-b0-bBu">
+                                <rect key="frame" x="309" y="505.5" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="3CO-Nx-Wdn"/>
+                                    <constraint firstAttribute="width" constant="46" id="Cw6-8M-kmr"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="likeButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="UdK-aG-f3j"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -188,7 +198,9 @@
                             <constraint firstItem="IO7-nw-6KB" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="DNS-d8-jsD"/>
                             <constraint firstAttribute="trailing" secondItem="IO7-nw-6KB" secondAttribute="trailing" constant="16" id="H0r-XL-YXz"/>
                             <constraint firstItem="PUa-Dn-Z6k" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="HGg-Jy-ISj"/>
+                            <constraint firstItem="xR8-b0-bBu" firstAttribute="centerY" secondItem="Us6-U2-kyD" secondAttribute="centerY" id="MTL-Th-R7K"/>
                             <constraint firstItem="7EA-pY-GDv" firstAttribute="top" secondItem="IO7-nw-6KB" secondAttribute="bottom" id="NZo-Xw-G6Z"/>
+                            <constraint firstItem="xR8-b0-bBu" firstAttribute="centerX" secondItem="Us6-U2-kyD" secondAttribute="centerX" id="P7n-cO-tJ5"/>
                             <constraint firstAttribute="bottom" secondItem="PUa-Dn-Z6k" secondAttribute="bottom" constant="8" id="PRm-q7-UMl"/>
                             <constraint firstItem="p91-BU-613" firstAttribute="top" secondItem="cQV-oh-YJ4" secondAttribute="top" constant="8" id="QE2-HU-H7c"/>
                             <constraint firstAttribute="trailing" secondItem="p91-BU-613" secondAttribute="trailing" constant="16" id="SG0-YC-wEa"/>
@@ -214,6 +226,7 @@
             <connections>
                 <outlet property="byLabel" destination="F9Q-xC-IMV" id="4jX-AI-Eh1"/>
                 <outlet property="collectionView" destination="IO7-nw-6KB" id="jh9-Va-oSn"/>
+                <outlet property="likeButton" destination="xR8-b0-bBu" id="8pS-sm-EX4"/>
                 <outlet property="likeButtonImageView" destination="Us6-U2-kyD" id="jDq-WT-RgR"/>
                 <outlet property="postedLabel" destination="eZp-bw-5Yy" id="OaP-26-hV9"/>
                 <outlet property="priceLabel" destination="2D9-dG-k9E" id="o87-Hv-JUL"/>
